@@ -48,7 +48,6 @@ import org.apache.commons.lang3.StringUtils;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -63,9 +62,9 @@ import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
  */
 @Service
 public class ServiceCommandService {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(ServiceCommandService.class);
-    
+
     private static final String STARROCKS = "starrocks";
     private static final String DORIS = "doris";
     private static final String HDFS = "hdfs";
@@ -75,7 +74,7 @@ public class ServiceCommandService {
     private static final String HTTP = "http";
     private static final String HTTPS = "https";
     private static final String NODE = "NODE";
-    
+
     private final ClusterServiceCommandHostCommandService hostCommandService;
     private final ClusterServiceCommandHostService commandHostService;
     private final ClusterServiceCommandService commandService;
@@ -84,7 +83,7 @@ public class ServiceCommandService {
     private final ClusterServiceRoleInstanceWebuisService webuisService;
     private final HdfsECService hdfsECService;
     private final OtelCollectorConfigService otelCollectorConfigService;
-    
+
     public ServiceCommandService(ClusterServiceCommandHostCommandService hostCommandService,
                                  ClusterServiceCommandHostService commandHostService,
                                  ClusterServiceCommandService commandService,
@@ -102,7 +101,7 @@ public class ServiceCommandService {
         this.hdfsECService = hdfsECService;
         this.otelCollectorConfigService = otelCollectorConfigService;
     }
-    
+
     /**
      * 异步处理主机命令完成通知（替代 ServiceCommandActor.tell(message)）。
      */
@@ -111,26 +110,26 @@ public class ServiceCommandService {
         doUpdateCommandHost(message);
         doUpdateCommand(message);
     }
-    
+
     // ─── private helpers ─────────────────────────────────────────────────────
-    
+
     private void doUpdateCommandHost(UpdateCommandHostMessage message) {
         ClusterServiceCommandHostEntity commandHost = commandHostService.getOne(
                 new QueryWrapper<ClusterServiceCommandHostEntity>()
                         .eq(Constants.COMMAND_HOST_ID, message.getCommandHostId()));
-        
+
         Long size = hostCommandService.getHostCommandSizeByHostnameAndCommandHostId(
                 message.getHostname(), message.getCommandHostId());
         Integer totalProgress = hostCommandService.getHostCommandTotalProgressByHostnameAndCommandHostId(
                 message.getHostname(), message.getCommandHostId());
         long progress = totalProgress / size;
         commandHost.setCommandProgress((int) progress);
-        
+
         List<ClusterServiceCommandHostCommandEntity> failList =
                 hostCommandService.findFailedHostCommand(message.getHostname(), message.getCommandHostId());
         List<ClusterServiceCommandHostCommandEntity> cancelList =
                 hostCommandService.findCanceledHostCommand(message.getHostname(), message.getCommandHostId());
-        
+
         if (!failList.isEmpty()) {
             commandHost.setCommandState(CommandState.FAILED);
         } else if (!cancelList.isEmpty()) {
@@ -142,22 +141,22 @@ public class ServiceCommandService {
                 new QueryWrapper<ClusterServiceCommandHostEntity>()
                         .eq(Constants.COMMAND_HOST_ID, message.getCommandHostId()));
     }
-    
+
     private void doUpdateCommand(UpdateCommandHostMessage message) {
         Long size = commandHostService.getCommandHostSizeByCommandId(message.getCommandId());
         Integer totalProgress = commandHostService.getCommandHostTotalProgressByCommandId(message.getCommandId());
         long progress = totalProgress / size;
-        
+
         ClusterServiceCommandEntity command = commandService.lambdaQuery()
                 .eq(ClusterServiceCommandEntity::getCommandId, message.getCommandId())
                 .one();
         command.setCommandProgress((int) progress);
-        
+
         List<ClusterServiceCommandHostEntity> failList =
                 commandHostService.findFailedCommandHost(message.getCommandId());
         List<ClusterServiceCommandHostEntity> cancelList =
                 commandHostService.findCanceledCommandHost(message.getCommandId());
-        
+
         if (!failList.isEmpty()) {
             command.setCommandState(CommandState.FAILED);
             command.setEndTime(new Date());
@@ -167,49 +166,49 @@ public class ServiceCommandService {
         } else if (progress == 100) {
             command.setCommandState(CommandState.SUCCESS);
             command.setEndTime(new Date());
-            
+
             String serviceName = command.getServiceName();
             ClusterInfoEntity clusterInfo = clusterInfoService.getById(command.getClusterId());
-            
+
             if (command.getCommandType() == 4 && HDFS.equalsIgnoreCase(serviceName)) {
                 updateHDFSWebUi(clusterInfo.getId(), command.getServiceInstanceId());
             }
-            
+
             if (command.getCommandType() == 1) {
                 if (ClusterState.NEED_CONFIG.equals(clusterInfo.getClusterState())) {
                     clusterInfo.setClusterState(ClusterState.RUNNING);
                     clusterInfoService.updateById(clusterInfo);
                 }
-                
+
                 if (HDFS.equalsIgnoreCase(serviceName)) {
                     HdfsEcCommand hdfsEcCommand = new HdfsEcCommand();
                     hdfsEcCommand.setServiceInstanceId(command.getServiceInstanceId());
                     hdfsECService.manageHdfsEC(hdfsEcCommand);
                 }
-                
+
                 if (!STARROCKS.equalsIgnoreCase(serviceName) && !DORIS.equalsIgnoreCase(serviceName)) {
                     enableAlertConfig(NODE, clusterInfo.getId());
                 }
                 enableAlertConfig(serviceName, clusterInfo.getId());
             }
-            
+
             if (shouldRefreshOtelCollectors(command.getCommandType())) {
                 refreshAffectedOtelCollectors(command);
             }
         }
-        
+
         commandService.lambdaUpdate()
                 .eq(ClusterServiceCommandEntity::getCommandId, command.getCommandId())
                 .update(command);
     }
-    
+
     private void enableAlertConfig(String serviceName, Integer clusterId) {
         List<ClusterAlertQuota> list = alertQuotaService.listAlertQuotaByServiceName(serviceName);
-        List<Integer> ids = list.stream().map(ClusterAlertQuota::getId).collect(Collectors.toList());
+        List<Integer> ids = list.stream().map(ClusterAlertQuota::getId).toList();
         String alertQuotaIds = StringUtils.join(ids, ",");
         alertQuotaService.start(clusterId, alertQuotaIds);
     }
-    
+
     private void updateHDFSWebUi(Integer clusterId, Integer serviceInstanceId) {
         Map<String, String> variables = GlobalVariables.getVariables(clusterId);
         if (variables.containsKey(ENABLE_HDFS_KERBEROS)) {
@@ -227,7 +226,7 @@ public class ServiceCommandService {
             }
         }
     }
-    
+
     private boolean shouldRefreshOtelCollectors(Integer commandType) {
         CommandType type = CommandType.ofCode(commandType);
         return CommandType.START_SERVICE.equals(type)
@@ -236,7 +235,7 @@ public class ServiceCommandService {
                 || CommandType.START_WITH_CONFIG.equals(type)
                 || CommandType.RESTART_WITH_CONFIG.equals(type);
     }
-    
+
     private void refreshAffectedOtelCollectors(ClusterServiceCommandEntity command) {
         hostCommandService.getHostCommandListByCommandId(command.getCommandId()).stream()
                 .map(ClusterServiceCommandHostCommandEntity::getHostname)
