@@ -72,9 +72,6 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.support.TransactionSynchronization;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
@@ -89,6 +86,8 @@ import cn.hutool.core.collection.CollectionUtil;
 import cn.hutool.core.date.DatePattern;
 import cn.hutool.core.date.DateUtil;
 import cn.hutool.core.util.StrUtil;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * @author zhanghuangbin
@@ -97,34 +96,34 @@ import cn.hutool.core.util.StrUtil;
 @Slf4j
 @RequiredArgsConstructor
 public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSupport implements PhysicalProductInstallService {
-    
+
     private final ServiceInstallService serviceInstallService;
-    
+
     private final ClusterServiceInstanceService clusterServiceInstanceService;
-    
+
     private final FrameServiceRoleService frameServiceRoleService;
-    
+
     private final ClusterServiceCommandHostService commandHostService;
-    
+
     private final ClusterServiceCommandHostCommandService hostCommandService;
-    
+
     private final ClusterServiceCommandService commandService;
-    
+
     private final ClusterServiceInstanceService serviceInstanceService;
-    
+
     private final ClusterServiceRoleInstanceService roleInstanceService;
-    
+
     private final ClusterHostService clusterHostService;
-    
+
     private final FrameServiceService frameService;
-    
+
     private final DAGExecutor dagExecutor;
-    
+
     @Override
     public ValidateResultVO validateDeploymentModel(DeploymentModel model, DeploymentDTO dto) {
         List<String> errors = new ArrayList<>();
         List<DeploySrvModel> apps = getTargetApps(model);
-        
+
         Set<String> deployHosts = apps.stream()
                 .flatMap(app -> app.getRoles().stream())
                 .flatMap(role -> role.getDeployHosts().stream())
@@ -135,7 +134,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         if (!deployHosts.isEmpty()) {
             errors.add(String.format("以下主机%s不存在或者无法通讯", StrUtil.join(",", deployHosts)));
         }
-        
+
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(dto.getClusterId());
         List<FrameServiceEntity> serviceList = frameService.getFrameServiceList(clusterInfo.getId());
         ProductDeployDAGBuildContext ctx = new ProductDeployDAGBuildContext(serviceList);
@@ -154,7 +153,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                 errors.add(String.format("服务%s %s正在执行命令，请等待命令执行完成或者取消命令", app.getName(), app.getVersion()));
             }
         });
-        
+
         if (errors.isEmpty()) {
             ValidateResultVO vo = new ValidateResultVO();
             List<ValidateResultVO.DeploySrvRoleModel> roles = new ArrayList<>();
@@ -174,21 +173,21 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             return new ValidateResultVO(errors);
         }
     }
-    
+
     private List<DeploySrvModel> getTargetApps(DeploymentModel model) {
         return model.getApp()
                 .stream()
                 .filter(app -> app.getDeployType().equalsIgnoreCase("physical"))
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
     @Override
     public InstallResult deploy(DeploymentDTO dto) {
         DeploymentModel model = doParseDeploymentFile(dto);
         List<DeploySrvModel> apps = getTargetApps(model);
         log.debug("解析到配置\n：{}", JSON.toJSONString(model, JSONWriter.Feature.PrettyFormat));
         log.info("完成解析部署VOS格式的制品文件, 需要部署VOS格式的制品{}个应用", apps.size());
-        
+
         // 保存serviceRole和host的映射
         List<ServiceRoleHostMapping> hostMappings = new ArrayList<>();
         apps.stream()
@@ -201,14 +200,14 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                 });
         serviceInstallService.saveServiceRoleHostMapping(dto.getClusterId(), hostMappings);
         log.info("缓存存角色和host映射成功, 总共{}个映射", hostMappings.size());
-        
+
         // 保存应用的启动配置
         apps.forEach(app -> {
             List<ServiceConfig> configs = serviceInstallService.getServiceConfigFromDdl(dto.getClusterId(), app.getName());
             serviceInstallService.saveServiceConfig(dto.getClusterId(), app.getName(), configs, -1);
         });
         log.info("保存部署VOS格式的制品配置项成功");
-        
+
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(dto.getClusterId());
         List<FrameServiceEntity> serviceList = frameService.getFrameServiceList(clusterInfo.getId());
         Map<String, FrameServiceEntity> srvDefMap = CollectionUtil.toMap(serviceList, new HashMap<>(), srv -> srv.getServiceName() + ":" + srv.getServiceVersion());
@@ -218,7 +217,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             commandIds.add(cmdId);
         });
         log.info("保存安装命令成功, 共需要安装{}个应用", commandIds.size());
-        
+
         ProductDeployDAGBuildContext ctx = new ProductDeployDAGBuildContext(serviceList);
         DAG<String, DAGNode, Integer> dag = ctx.buildDeployDAG(apps, t -> {
             DeploySrvModel srvModel = t.unwrap();
@@ -231,21 +230,21 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         invokeCommandsAfterCommit(dagId, commandIds);
         return new InstallResult(dagId);
     }
-    
+
     /**
      * 事务提交后再执行 DAG 命令（提交前 DAG 线程可能查不到本事务保存的命令）。
      * 统一模板，消除三处复制粘贴的匿名 TransactionSynchronization。
      */
     private void invokeCommandsAfterCommit(String dagId, List<String> commandIds) {
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
-            
+
             @Override
             public void afterCommit() {
                 invokeCommands(dagId, false, commandIds);
             }
         });
     }
-    
+
     private String doGenerateInstallCmd(ClusterInfoEntity cluster, FrameServiceEntity frameService) {
         ClusterServiceInstanceEntity serviceInstance = clusterServiceInstanceService.getServiceInstanceByClusterIdAndServiceName(cluster.getId(), frameService.getServiceName());
         CommandType commandType = ServiceState.WAIT_INSTALL.equals(serviceInstance.getServiceState()) ? CommandType.INSTALL_SERVICE : CommandType.UPGRADE_SERVICE;
@@ -253,7 +252,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         cmd.setServiceInstanceId(serviceInstance.getId());
         commandService.save(cmd);
         log.info("保存{}{}命令成功, 命令ID:{}", commandType.getCommandName(Constants.CN), frameService.getServiceName(), cmd.getCommandId());
-        
+
         @SuppressWarnings("unchecked")
         Map<String, List<String>> serviceRoleHostMap = (Map<String, List<String>>) CacheUtils.get(Namespace.of(cluster.getClusterCode(), Constants.SERVICE_ROLE_HOST_MAPPING));
         // 保存commandHost的相关数据
@@ -269,28 +268,28 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         log.info("命令:{}{}保存各主机总命令信息成功,共涉及{}台主机",
                 CommandType.ofCode(cmd.getCommandType()).getCommandName(Constants.CN),
                 cmd.getServiceName(), hostEntityList.size());
-        
+
         // 保存每一台主机每一个角色需要执行的命令
         Map<String, ClusterServiceCommandHostEntity> cache = CollectionUtil.toMap(hostEntityList, new HashMap<>(), ClusterServiceCommandHostEntity::getHostname);
         List<ClusterServiceCommandHostCommandEntity> hostCommandList = new ArrayList<>();
-        
+
         // 一次查回本服务实例的全部角色实例，替代角色×主机次 getOneServiceRole 查询
         Set<String> existingRoleHosts = roleInstanceService
                 .getServiceRoleInstanceListByServiceId(serviceInstance.getId())
                 .stream()
                 .map(ri -> ri.getServiceRoleName() + "@" + ri.getHostname())
                 .collect(Collectors.toSet());
-        
+
         for (FrameServiceRoleEntity serviceRole : serviceRoleList) {
             List<String> hosts = serviceRoleHostMap.get(serviceRole.getServiceRoleName());
             if (CollectionUtil.isEmpty(hosts)) {
                 continue;
             }
-            
+
             for (int i = 0; i < hosts.size(); i++) {
                 String hostname = hosts.get(i);
                 boolean exists = existingRoleHosts.contains(serviceRole.getServiceRoleName() + "@" + hostname);
-                
+
                 CommandType roleCmdType = exists ? CommandType.UPGRADE_SERVICE : CommandType.INSTALL_SERVICE;
                 ClusterServiceCommandHostCommandEntity hostCommand = ServiceCommandUtils.generateCommandHostCommandEntity(
                         roleCmdType, cmd.getCommandId(),
@@ -303,14 +302,14 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         hostCommandService.saveBatch(hostCommandList);
         log.info("命令:{}{}保存各主机需要执行命令成功,共需要执行{}个命令", CommandType.ofCode(cmd.getCommandType()).getCommandName(Constants.CN),
                 cmd.getServiceName(), hostCommandList.size());
-        
+
         return cmd.getCommandId();
     }
-    
+
     private String saveDAG(Integer clusterId, String serviceActionName, List<String> commandIds, DAG<String, DAGNode, Integer> dag,
                            List<FrameServiceEntity> serviceList) {
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(clusterId);
-        
+
         ProductCmdSrvMappingContext context = new ProductCmdSrvMappingContext();
         context.setSrvCmd(commandService.lambdaQuery().in(ClusterServiceCommandEntity::getCommandId, commandIds).list());
         context.setCmdHost(hostCommandService.lambdaQuery().in(ClusterServiceCommandHostCommandEntity::getCommandId, commandIds).list());
@@ -325,41 +324,41 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             serviceNode.setCommandId(cmd.getCommandId());
             serviceNode.setCommandType(CommandType.ofCode(cmd.getCommandType()));
             serviceNode.setServiceName(info.getName());
-            
+
             FrameServiceEntity serviceEntity = srvDefMap.get(info.getName() + ":" + info.getVersion());
             List<FrameServiceRoleEntity> srvRoles = frameServiceRoleService.getAllServiceRoleList(serviceEntity.getId());
             Map<String, FrameServiceRoleEntity> srvRoleMap = CollectionUtil.toMap(srvRoles, new HashMap<>(), FrameServiceRoleEntity::getServiceRoleName);
-            
+
             List<ServiceRoleInfo> masterRoles = new ArrayList<>();
             List<ServiceRoleInfo> workerRoles = new ArrayList<>();
             List<ServiceRoleInfo> clientRoles = new ArrayList<>();
-            
+
             // serviceInfo 每个服务节点只解析一次（原先在内层循环里每个 hostCommand 重复解析）
             ServiceInfo serviceInfo = JSONObject.parseObject(serviceEntity.getServiceJson(), ServiceInfo.class);
-            
+
             List<ClusterServiceCommandHostCommandEntity> hostCommands = context.getCmdHostList(cmd.getCommandId());
             hostCommands.sort(Comparator.comparing(ClusterServiceCommandHostCommandEntity::getSort, Comparator.nullsLast(Comparator.naturalOrder())));
             for (ClusterServiceCommandHostCommandEntity hostCommand : hostCommands) {
                 FrameServiceRoleEntity frameServiceRoleEntity = srvRoleMap.get(hostCommand.getServiceRoleName());
-                
+
                 ServiceRoleInfo serviceRoleInfo = JSONObject.parseObject(frameServiceRoleEntity.getServiceRoleJson(), ServiceRoleInfo.class);
                 serviceRoleInfo.setClusterId(clusterInfo.getId());
-                
+
                 serviceRoleInfo.setHostname(hostCommand.getHostname());
                 serviceRoleInfo.setHostCommandId(hostCommand.getHostCommandId());
-                
+
                 serviceRoleInfo.setParentName(cmd.getServiceName());
                 serviceRoleInfo.setCommandType(CommandType.ofCode(hostCommand.getCommandType()));
                 serviceRoleInfo.setServiceInstanceId(cmd.getServiceInstanceId());
-                
+
                 serviceRoleInfo.setArchInfoMap(ServicePkgNameUtils.getArchInfo(serviceEntity));
                 serviceRoleInfo.setFrameCode(serviceEntity.getFrameCode());
-                
+
                 serviceRoleInfo.setCreateDecompressDir(serviceInfo.getCreateDecompressDir());
-                
+
                 Optional.ofNullable(ServiceRoleStrategyContext.getServiceRoleHandler(serviceRoleInfo.getName()))
                         .ifPresent(ha -> ha.handlerServiceRoleInfo(serviceRoleInfo, hostCommand.getHostname()));
-                
+
                 if (ServiceRoleType.MASTER.equals(serviceRoleInfo.getRoleType())) {
                     masterRoles.add(serviceRoleInfo);
                 } else if (ServiceRoleType.WORKER.equals(serviceRoleInfo.getRoleType())) {
@@ -368,20 +367,20 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                     clientRoles.add(serviceRoleInfo);
                 }
             }
-            
+
             serviceNode.setMasterRoles(masterRoles);
             serviceNode.setWorkerRoles(workerRoles);
             serviceNode.setClientRoles(clientRoles);
-            
+
             NodeDefinitionEntity node = new NodeDefinitionEntity();
             node.setNodeName(info.getName());
             node.setNodeConfig(JSONObject.toJSONString(serviceNode));
             nodeMap.put(info.getName(), node);
         });
-        
+
         DagDefinition definition = new DagDefinition();
         definition.setDagName(String.format("%s服务-%s", serviceActionName, DateUtil.format(new Date(), DatePattern.NORM_DATETIME_PATTERN)));
-        
+
         StringBuilder sb = new StringBuilder();
         sb.append(serviceActionName).append("服务:");
         dag.getNodes().forEach((srv, n) -> sb.append(srv).append(";"));
@@ -389,16 +388,16 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         definition.setDescription(desc.length() > 300 ? desc.substring(0, 300) + "..." : desc);
         String dagId = dagService.saveDAG(clusterId, definition);
         dagService.saveNodes(dagId, new ArrayList<>(nodeMap.values()));
-        
+
         dag.getEdges().forEach(edge -> {
             NodeDefinitionEntity start = nodeMap.get(edge.getStart());
             NodeDefinitionEntity end = nodeMap.get(edge.getEnd());
             dagService.saveEdge(dagId, start, end);
         });
-        
+
         return dagId;
     }
-    
+
     private void invokeCommands(String dagId, boolean restart, List<String> commandIds) {
         CompletableFuture.runAsync(() -> {
             try {
@@ -413,7 +412,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             }
         });
     }
-    
+
     private void updateCommandState(String cmdId, CommandState state, boolean restart) {
         ClusterServiceCommandEntity cmd = commandService.getCommandById(cmdId);
         if (state == CommandState.FAILED) {
@@ -428,7 +427,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                         .list()
                         .stream()
                         .map(ClusterServiceCommandHostEntity::getCommandHostId)
-                        .collect(Collectors.toList());
+                        .toList();
                 if (!cmdHostList.isEmpty()) {
                     hostCommandService.lambdaUpdate()
                             .in(ClusterServiceCommandHostCommandEntity::getCommandHostId, cmdHostList)
@@ -443,7 +442,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                 }
             }
         }
-        
+
         if (state == CommandState.RUNNING) {
             if (restart && cmd.getCommandState().equals(CommandState.SUCCESS)) {
                 return;
@@ -457,7 +456,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                     .list()
                     .stream()
                     .map(ClusterServiceCommandHostEntity::getCommandHostId)
-                    .collect(Collectors.toList());
+                    .toList();
             if (!cmdHostList.isEmpty()) {
                 hostCommandService.lambdaUpdate()
                         .in(ClusterServiceCommandHostCommandEntity::getCommandHostId, cmdHostList)
@@ -472,14 +471,14 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             }
         }
     }
-    
+
     @Override
     public void redeploy(RunDagDto dto) {
         List<NodeDefinition> nodes = dagService.getNodesByDagId(dto.getDagId(), true);
         List<String> commandIds = new ArrayList<>();
         for (NodeDefinition node : nodes) {
             ServiceNode serviceNode = JSONObject.parseObject((String) node.getNodeConfig(), ServiceNode.class);
-            
+
             if (dto.isRestart() && !node.getStatus().equals(NodeStatus.SUCCESS)) {
                 serviceNode.getMasterRoles().forEach(role -> {
                     Integer roleGroupId = (Integer) CacheUtils.get("UseRoleGroup_" + role.getServiceInstanceId());
@@ -490,17 +489,17 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             }
             commandIds.add(serviceNode.getCommandId());
         }
-        
+
         for (NodeDefinition node : nodes) {
             if (dto.isRestart() && !NodeStatus.SUCCESS.equals(node.getStatus())) {
                 updateNode(node);
             }
         }
-        
+
         commandIds.forEach(cmd -> updateCommandState(cmd, CommandState.RUNNING, dto.isRestart()));
         invokeCommands(dto.getDagId(), dto.isRestart(), commandIds);
     }
-    
+
     /**
      * 更新节点的状态以及配置
      *
@@ -520,7 +519,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         if (!roleInfoList.isEmpty()) {
             String frameCode = roleInfoList.get(0).getFrameCode();
             Integer clusterId = roleInfoList.get(0).getClusterId();
-            
+
             FrameServiceEntity serviceEntity = frameService.getNewestDefByName(frameCode, serviceNode.getServiceName());
             List<FrameServiceRoleEntity> srvRoles = frameServiceRoleService.getAllServiceRoleList(serviceEntity.getId());
             Map<String, FrameServiceRoleEntity> srvRoleMap = CollectionUtil.toMap(srvRoles, new HashMap<>(), FrameServiceRoleEntity::getServiceRoleName);
@@ -532,7 +531,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                     roleInstanceMap.put(String.format("%s-%s", instance.getHostname(), instance.getServiceRoleName()), instance);
                 });
             }
-            
+
             ServiceInfo serviceDef = JSONObject.parseObject(serviceEntity.getServiceJson(), ServiceInfo.class);
             CopyOptions cpOpt = CopyOptions.create().setIgnoreProperties(
                     ServiceRoleInfo::getClusterId, ServiceRoleInfo::getHostname, ServiceRoleInfo::getHostCommandId,
@@ -551,29 +550,29 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
                         oldOne.setCommandType(CommandType.UPGRADE_SERVICE);
                     }
                 }
-                
+
                 BeanUtil.copyProperties(newOne, oldOne, cpOpt);
-                
+
                 oldOne.setCreateDecompressDir(serviceDef.getCreateDecompressDir());
                 oldOne.setArchInfoMap(ServicePkgNameUtils.getArchInfo(serviceEntity));
-                
+
                 Optional.ofNullable(ServiceRoleStrategyContext.getServiceRoleHandler(newOne.getName()))
                         .ifPresent(ha -> ha.handlerServiceRoleInfo(oldOne, oldOne.getHostname()));
             }
         }
-        
+
         node.setStatus(NodeStatus.PENDING);
         node.setNodeConfig(JSONObject.toJSONString(serviceNode));
         dagService.updateNode(node);
     }
-    
+
     @Override
     public String generateGenericInstallCommand(Integer clusterId, List<String> serviceNames) {
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(clusterId);
         List<FrameServiceEntity> serviceList = frameService.getFrameServiceList(clusterInfo.getId());
         ProductDeployDAGBuildContext ctx = new ProductDeployDAGBuildContext(serviceList);
         List<String> commandIds = new ArrayList<>(serviceNames.size());
-        
+
         List<SimpleServiceResource> resources = new ArrayList<>();
         serviceNames.forEach(srv -> {
             FrameServiceEntity entity = ctx.getHighestVersionSrv(srv);
@@ -582,7 +581,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             String cmdId = doGenerateInstallCmd(clusterInfo, ctx.getHighestVersionSrv(srv));
             commandIds.add(cmdId);
         });
-        
+
         DAG<String, DAGNode, Integer> dag = ctx.buildDeployDAG(resources, rs -> {
             SimpleServiceResource resource = rs.unwrap();
             return BeanUtil.toBean(resource, DAGNode.class);
@@ -590,7 +589,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         String dagId = saveDAG(clusterId, "部署VOS格式的制品", commandIds, dag, serviceList);
         return dagId;
     }
-    
+
     @Override
     public String generateAndExecSrvInstCmd(Integer clusterId, CommandType commandType, List<Integer> serviceInstanceIds) {
         List<Integer> serviceFrameworkIds = new ArrayList<>();
@@ -602,7 +601,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             }
             ClusterServiceInstanceEntity serviceInstance = clusterServiceInstanceService.getById(instId);
             serviceFrameworkIds.add(serviceInstance.getFrameServiceId());
-            
+
             String cmdId = doGenerateSrvInstOpCommand(serviceInstance, roleInstances, commandType);
             if (cmdId != null) {
                 commandIds.add(cmdId);
@@ -611,14 +610,14 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         if (commandIds.isEmpty()) {
             return null;
         }
-        
+
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(clusterId);
         List<FrameServiceEntity> serviceList = frameService.getFrameServiceList(clusterInfo.getId());
         ProductDeployDAGBuildContext ctx = new ProductDeployDAGBuildContext(serviceList);
         List<SimpleServiceResource> resources = frameService.listServices(serviceFrameworkIds)
                 .stream()
                 .map(s -> new SimpleServiceResource(s.getServiceName(), s.getServiceVersion()))
-                .collect(Collectors.toList());
+                .toList();
         DAG<String, DAGNode, Integer> dag = ctx.buildDeployDAG(resources, t -> {
             SimpleServiceResource srvModel = t.unwrap();
             DAGNode node = new DAGNode();
@@ -633,12 +632,12 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         invokeCommandsAfterCommit(dagId, commandIds);
         return dagId;
     }
-    
+
     private String doGenerateSrvInstOpCommand(ClusterServiceInstanceEntity serviceInstance, List<ClusterServiceRoleInstanceEntity> roleInstanceList, CommandType commandType) {
         ClusterServiceCommandEntity command = ServiceCommandUtils.generateCommandEntity(serviceInstance.getClusterId(), commandType, serviceInstance.getServiceName());
         command.setServiceInstanceId(serviceInstance.getId());
         commandService.save(command);
-        
+
         List<ClusterServiceCommandHostCommandEntity> hostCommands = new ArrayList<>();
         Map<String, ClusterServiceCommandHostEntity> map = new HashMap<>();
         for (ClusterServiceRoleInstanceEntity roleInstance : roleInstanceList) {
@@ -652,37 +651,37 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         }
         commandHostService.saveBatch(map.values());
         hostCommandService.saveBatch(hostCommands);
-        
+
         return command.getCommandId();
     }
-    
+
     @Override
     public String generateAndExecSrvRoleCmd(Integer clusterId, CommandType commandType, Integer instId, List<Integer> roleInstIds) {
         if (Arrays.asList(CommandType.UPGRADE_SERVICE, CommandType.INSTALL_SERVICE).contains(commandType)) {
             throw new UnsupportedOperationException(String.format("command %s is not support", commandType));
         }
-        
+
         List<Integer> serviceFrameworkIds = new ArrayList<>();
-        
+
         List<ClusterServiceRoleInstanceEntity> roleInstances = roleInstanceService.lambdaQuery()
                 .in(ClusterServiceRoleInstanceEntity::getId, roleInstIds)
                 .list();
         if (CollectionUtil.isEmpty(roleInstances)) {
             return null;
         }
-        
+
         ClusterServiceInstanceEntity serviceInstance = clusterServiceInstanceService.getById(instId);
         serviceFrameworkIds.add(serviceInstance.getFrameServiceId());
-        
+
         String cmdId = doGenerateSrvInstOpCommand(serviceInstance, roleInstances, commandType);
-        
+
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(clusterId);
         List<FrameServiceEntity> serviceList = frameService.getFrameServiceList(clusterInfo.getId());
         ProductDeployDAGBuildContext ctx = new ProductDeployDAGBuildContext(serviceList);
         List<SimpleServiceResource> resources = frameService.listServices(serviceFrameworkIds)
                 .stream()
                 .map(s -> new SimpleServiceResource(s.getServiceName(), s.getServiceVersion()))
-                .collect(Collectors.toList());
+                .toList();
         DAG<String, DAGNode, Integer> dag = ctx.buildDeployDAG(resources, t -> {
             SimpleServiceResource srvModel = t.unwrap();
             DAGNode node = new DAGNode();
@@ -693,27 +692,27 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         if (CommandType.STOP_SERVICE.equals(commandType)) {
             dag = dag.getReverseDag();
         }
-        
+
         List<String> commandIds = Collections.singletonList(cmdId);
         String dagId = saveDAG(clusterInfo.getId(), commandType.getCommandName(Constants.CN), commandIds, dag, serviceList);
         invokeCommandsAfterCommit(dagId, commandIds);
         return dagId;
     }
-    
+
     @Override
     public void generateAndExecSrvRoleCommands(Integer clusterId, CommandType commandType, Map<Integer, List<Integer>> instanceIdMap) {
         instanceIdMap.forEach((instId, roleInstIds) -> generateAndExecSrvRoleCmd(clusterId, commandType, instId, roleInstIds));
     }
-    
+
     @Override
     public List<FrameServiceEntity> listNewestByDeployment(DeploymentDTO dto) {
         DeploymentModel model = doParseDeploymentFile(dto);
-        List<String> serviceList = getTargetApps(model).stream().map(DeploySrvModel::getName).collect(Collectors.toList());
+        List<String> serviceList = getTargetApps(model).stream().map(DeploySrvModel::getName).toList();
         List<FrameServiceEntity> list = frameService.listNewest(dto.getClusterId(), true);
         list.forEach(et -> et.setSelected(serviceList.contains(et.getServiceName())));
         return list;
     }
-    
+
     @Override
     public List<FrameServiceRoleEntity> getServiceRoleListByDeployment(ServiceRoleQueryDTO dto) {
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(dto.getClusterId());
@@ -726,23 +725,23 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
         setHosts(list, BeanUtil.toBean(dto, DeploymentDTO.class));
         return list;
     }
-    
+
     private void setHosts(List<FrameServiceRoleEntity> list, DeploymentDTO dto) {
         DeploymentModel model = doParseDeploymentFile(dto);
-        
+
         Map<String, DeploySrvRoleModel> map = new HashMap<>();
         getTargetApps(model).forEach(app -> {
             app.getRoles().forEach(role -> {
                 map.put(app.getName() + "_" + role.getName(), role);
             });
         });
-        
+
         // 去重后一次查回服务实体，避免逐角色 getById 的 N+1 查询
         List<Integer> serviceIds = list.stream()
                 .map(FrameServiceRoleEntity::getServiceId)
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
         Map<Integer, FrameServiceEntity> srvEntityMap = serviceIds.isEmpty()
                 ? new HashMap<>()
                 : frameService.listByIds(serviceIds).stream()
@@ -758,7 +757,7 @@ public class PhysicalProductInstallServiceImpl extends ProductDeployHandlerSuppo
             }
         }
     }
-    
+
     @Override
     public List<FrameServiceRoleEntity> getNonMasterRoleListByDeployment(DeploymentDTO dto) {
         ClusterInfoEntity clusterInfo = clusterInfoService.getById(dto.getClusterId());
