@@ -33,7 +33,6 @@ import com.datasophon.dao.mapper.ClusterServiceInstanceConfigMapper;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -48,10 +47,10 @@ public class ClusterServiceInstanceConfigServiceImpl
             ServiceImpl<ClusterServiceInstanceConfigMapper, ClusterServiceInstanceConfigEntity>
         implements
             ClusterServiceInstanceConfigService {
-    
+
     @Autowired
     private ClusterServiceRoleGroupConfigService roleGroupConfigService;
-    
+
     @Override
     public Result getServiceInstanceConfig(Integer serviceInstanceId, Integer version, Integer roleGroupId,
                                            Integer page, Integer pageSize) {
@@ -64,7 +63,7 @@ public class ClusterServiceInstanceConfigServiceImpl
         }
         return Result.success();
     }
-    
+
     @Override
     public ClusterServiceInstanceConfigEntity getServiceConfigByServiceId(Integer id) {
         return this.lambdaQuery()
@@ -73,15 +72,15 @@ public class ClusterServiceInstanceConfigServiceImpl
                 .last("limit 1")
                 .one();
     }
-    
+
     @Override
     public Result getConfigVersion(Integer serviceInstanceId, Integer roleGroupId) {
-        
+
         List<ClusterServiceRoleGroupConfig> list =
                 roleGroupConfigService.list(new QueryWrapper<ClusterServiceRoleGroupConfig>()
                         .eq(Constants.ROLE_GROUP_ID, roleGroupId)
                         .orderByDesc(Constants.CONFIG_VERSION));
-        List<Integer> versions = list.stream().map(e -> e.getConfigVersion()).collect(Collectors.toList());
+        List<Integer> versions = list.stream().map(e -> e.getConfigVersion()).toList();
         return Result.success(versions);
     }
 }
