@@ -39,21 +39,21 @@ import com.alibaba.fastjson2.JSONObject;
 
 @Service("uniEngineService")
 public class UniEngineServiceImpl implements UniEngineService {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(UniEngineServiceImpl.class);
-    
+
     @Autowired
     ClusterServiceRoleInstanceService clusterServiceRoleInstanceService;
-    
+
     @Autowired
     ClusterVariableService clusterVariableService;
-    
+
     @Autowired
     ClusterInfoService clusterInfoService;
-    
+
     @Autowired
     ClusterHostService clusterHostService;
-    
+
     @Override
     public Result getEngineInfo() {
         List<ClusterInfoEntity> clusterList = clusterInfoService.getClusterList();
@@ -62,11 +62,11 @@ public class UniEngineServiceImpl implements UniEngineService {
         }
         Integer clusterId = clusterList.get(0).getId();
         Map<String, String> hostMaps = clusterHostService.getHostListByClusterId(clusterId).stream().collect(Collectors.toMap(ClusterHostDO::getHostname, ClusterHostDO::getIp));
-        
+
         EngineInfo engineInfo = new EngineInfo();
         engineInfo.setClusterId(clusterId);
         engineInfo.setEngineType("OFFLINE_ENGINE");
-        
+
         // 离线引擎
         List<ClusterServiceRoleInstanceEntity> dsApiServers = clusterServiceRoleInstanceService.getServiceRoleInstanceListByClusterIdAndRoleName(
                 clusterId, "UApiServer");
@@ -86,7 +86,7 @@ public class UniEngineServiceImpl implements UniEngineService {
         } else {
             return Result.error("EasyflowServer instances cannot be found");
         }
-        
+
         // 实时引擎
         List<ClusterServiceRoleInstanceEntity> ustreamServers = clusterServiceRoleInstanceService.getServiceRoleInstanceListByClusterIdAndRoleName(
                 clusterId, "UstreamServer");
@@ -100,19 +100,19 @@ public class UniEngineServiceImpl implements UniEngineService {
         } else {
             logger.warn("UstreamServer instances cannot be found");
         }
-        
+
         // 数据源
         engineInfo.setMysqlDatasource(getMysqlDatasource());
         engineInfo.setHiveDatasource(getHiveDatasource(clusterId).orElse(null));
         engineInfo.setPaimonDatasource(getPaimonDatasource(clusterId).orElse(null));
         engineInfo.setDorisDatasource(getDorisDatasource(clusterId, hostMaps).orElse(null));
         engineInfo.setKafkaDatasource(getKafkaDatasource(clusterId).orElse(null));
-        
+
         String data = JSON.toJSONString(engineInfo);
         return Result.success().put(Constants.DATA, PasswordSupport.encryptDbPassword(data));
-        
+
     }
-    
+
     public MysqlDatasource getMysqlDatasource() {
         MysqlDatasource mysqlDatasource = new MysqlDatasource();
         mysqlDatasource.setHost(PropertyUtils.getString("mysql.ip"));
@@ -124,10 +124,10 @@ public class UniEngineServiceImpl implements UniEngineService {
         mysqlOther.put("useSSL", false);
         mysqlDatasource.setOther(mysqlOther);
         logger.info("mysql get info success");
-        
+
         return mysqlDatasource;
     }
-    
+
     public Optional<HiveDatasource> getHiveDatasource(Integer clusterId) {
         List<ClusterServiceRoleInstanceEntity> hiveServer2s = clusterServiceRoleInstanceService.getServiceRoleInstanceListByClusterIdAndRoleName(
                 clusterId, "HiveServer2");
@@ -135,7 +135,7 @@ public class UniEngineServiceImpl implements UniEngineService {
             HiveDatasource hiveDatasource = new HiveDatasource();
             Map<String, String> hdfsVars = getClusterVarsMap(clusterId, "HDFS");
             Map<String, String> hiveVars = getClusterVarsMap(clusterId, "HIVE");
-            
+
             hiveDatasource.setHost(hiveServer2s.get(0).getHostname());
             hiveDatasource.setPort("10000");
             hiveDatasource.setAuthentication("SIMPLE");
@@ -154,22 +154,22 @@ public class UniEngineServiceImpl implements UniEngineService {
         }
         return Optional.empty();
     }
-    
+
     public Optional<PaimonDatasource> getPaimonDatasource(Integer clusterId) {
         List<ClusterServiceRoleInstanceEntity> sparkThriftServers = clusterServiceRoleInstanceService.getServiceRoleInstanceListByClusterIdAndRoleName(
                 clusterId, "Kyuubi");
-        
+
         if (CollectionUtils.isNotEmpty(sparkThriftServers)) {
             PaimonDatasource paimonDatasource = new PaimonDatasource();
             Map<String, String> hdfsVars = getClusterVarsMap(clusterId, "HDFS");
             Map<String, String> hiveVars = getClusterVarsMap(clusterId, "HIVE");
-            
+
             paimonDatasource.setHost(sparkThriftServers.get(0).getHostname());
             paimonDatasource.setPort("10009");
             paimonDatasource.setUserName("hive");
             paimonDatasource.setPassword("hive");
             paimonDatasource.setStorageType("HDFS");
-            
+
             String dfsNameservices = hdfsVars.getOrDefault("${HDFS.dfs.nameservices}", "");
             paimonDatasource.setDefaultFs(String.format("hdfs://%s", dfsNameservices));
             paimonDatasource.setThriftUrls(hiveVars.getOrDefault("${HIVE.hive.metastore.uris}", ""));
@@ -183,7 +183,7 @@ public class UniEngineServiceImpl implements UniEngineService {
         }
         return Optional.empty();
     }
-    
+
     private String getHadoopConfig(Map<String, String> hdfsVars, String haNodes, String dfsNameservices) {
         if (StringUtils.isBlank(haNodes)) {
             return "";
@@ -199,15 +199,15 @@ public class UniEngineServiceImpl implements UniEngineService {
                 hdfsVars.getOrDefault(String.format("${HDFS.dfs.namenode.rpc-address.${HDFS.dfs.nameservices}.%s}", nn2), ""));
         hadoopConfigJson.put(String.format("dfs.client.failover.proxy.provider.%s", dfsNameservices), hdfsVars.getOrDefault("${HDFS.dfs.client.failover.proxy.provider.${HDFS.dfs.nameservices}}", ""));
         return hadoopConfigJson.toJSONString();
-        
+
     }
-    
+
     public Optional<DorisDatasource> getDorisDatasource(Integer clusterId, Map<String, String> hostMaps) {
         List<ClusterServiceRoleInstanceEntity> dorisFEs = clusterServiceRoleInstanceService.getServiceRoleInstanceListByClusterIdAndRoleName(
                 clusterId, "DorisFE");
         List<ClusterServiceRoleInstanceEntity> dorisBEs = clusterServiceRoleInstanceService.getServiceRoleInstanceListByClusterIdAndRoleName(
                 clusterId, "DorisBE");
-        
+
         if (CollectionUtils.isNotEmpty(dorisFEs) && CollectionUtils.isNotEmpty(dorisBEs)) {
             Map<String, String> dorisVars = getClusterVarsMap(clusterId, "DORIS");
             DorisDatasource dorisDatasource = new DorisDatasource();
@@ -216,20 +216,20 @@ public class UniEngineServiceImpl implements UniEngineService {
             dorisDatasource.setWebPort(dorisVars.getOrDefault("${DORIS.http_port}", "18030"));
             dorisDatasource.setUserName("root");
             dorisDatasource.setPassword(dorisVars.getOrDefault("${DORIS.root_password}", "3ght%ed75BGk"));
-            
+
             String webserverPort = dorisVars.getOrDefault("${DORIS.webserver_port}", "18040");
-            List<String> beHostPorts = dorisBEs.stream().map(x -> String.format("%s:%s", hostMaps.getOrDefault(x.getHostname(), x.getHostname()), webserverPort)).collect(Collectors.toList());
+            List<String> beHostPorts = dorisBEs.stream().map(x -> String.format("%s:%s", hostMaps.getOrDefault(x.getHostname(), x.getHostname()), webserverPort)).toList();
             dorisDatasource.setBeHostPorts(beHostPorts);
             dorisDatasource.setBeHostPorts(beHostPorts);
             logger.info("doris get info success");
-            
+
             return Optional.of(dorisDatasource);
         } else {
             logger.warn("DorisFE or DorisBE instances cannot be found");
         }
         return Optional.empty();
     }
-    
+
     public Optional<KafkaDatasource> getKafkaDatasource(Integer clusterId) {
         List<ClusterServiceRoleInstanceEntity> kafkas = clusterServiceRoleInstanceService.getServiceRoleInstanceListByClusterIdAndRoleName(
                 clusterId, "KafkaBroker");
@@ -241,19 +241,19 @@ public class UniEngineServiceImpl implements UniEngineService {
             kafkaDatasource.setPassword("");
             kafkaDatasource.setSecurityProtocol("");
             logger.info("kafka get info success");
-            
+
             return Optional.of(kafkaDatasource);
         } else {
             logger.warn("KafkaBroker instances cannot be found");
         }
         return Optional.empty();
     }
-    
+
     public Map<String, String> getClusterVarsMap(Integer clusterId, String serviceName) {
         Map<String, String> varMaps = new HashMap<>();
         varMaps = clusterVariableService.getVariables(clusterId, serviceName)
                 .stream().collect(Collectors.toMap(ClusterVariable::getVariableName, ClusterVariable::getVariableValue));
         return varMaps;
     }
-    
+
 }
